# telegram-channel-parser

./: .gitignore  README.md  config.py  example.env  main.py  pyproject.toml
src/: dependencies.py
src/cli/: __init__.py  channel_parse.py  message_parse.py
